# ligen-template

./: Cargo.toml  README.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs
crates/main/: Cargo.toml
crates/main/src/: lib.rs
crates/{{project-name}}/: Cargo.toml
