[package]
name          = "{{project-name}}-core"
version       = "0.1.0"
authors       = ["{{authors}}"]
edition       = "2018"
description   = "Language interface generator"
documentation = "https://docs.rs/{{project-name}}"
readme        = "../../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ligen = "0.1"
