[package]
name          = "{{project-name}}-macro"
version       = "0.1.0"
authors       = ["{{authors}}"]
edition       = "2018"
description   = "Language interface generator"
documentation = "https://docs.rs/{{project-name}}"
readme        = "../../README.md"

[lib]
proc-macro = true

[dependencies]
ligen = "0.1"
{{project-name}}-core = { path = "../core" }
